--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -19,11 +19,14 @@
 /* FIGMA 768 design */
 @media screen and (max-width: 1023px) {}
 
-/* FIGMA 320 design (up to 425px) */
-@media screen and (max-width: 425px) {
+/* ONLY FOR FOOTER Breakpoint */
+@media screen and (max-width: 767px) {
     .footer__copyright {
         line-height: 14px;
         margin: 48px 0 0 0;
         text-align: left;
     }
 }
+
+/* FIGMA 320 design (up to 425px) */
+@media screen and (max-width: 425px) {}
