--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -21,10 +21,13 @@
 /* FIGMA 768 design */
 @media screen and (max-width: 1023px) {}
 
-/* FIGMA 320 design (up to 425px) */
-@media screen and (max-width: 425px) {
+/* ONLY FOR FOOTER Breakpoint */
+@media screen and (max-width: 767px) {
     .footer__link {
         font-size: 24px;
         line-height: 24px;
     }
 }
+
+/* FIGMA 320 design (up to 425px) */
+@media screen and (max-width: 425px) {}
