--- a/blocks/footer/__links-list/footer__links-list.css
+++ b/blocks/footer/__links-list/footer__links-list.css
@@ -13,9 +13,12 @@
 /* FIGMA 768 design */
 @media screen and (max-width: 1023px) {}
 
-/* FIGMA 320 design (up to 425px) */
-@media screen and (max-width: 425px) {
+/* ONLY FOR FOOTER Breakpoint */
+@media screen and (max-width: 767px) {
     .footer__links-list {
         flex-direction: column;
     }
 }
+
+/* FIGMA 320 design (up to 425px) */
+@media screen and (max-width: 425px) {}
