--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -14,9 +14,12 @@
 /* FIGMA 768 design */
 @media screen and (max-width: 1023px) {}
 
-/* FIGMA 320 design (up to 425px) */
-@media screen and (max-width: 425px) {
+/* ONLY FOR FOOTER Breakpoint */
+@media screen and (max-width: 767px) {
     .footer__nav {
         flex-direction: column;
     }
 }
+
+/* FIGMA 320 design (up to 425px) */
+@media screen and (max-width: 425px) {}
