--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,7 +7,8 @@
     text-align: center;
 
     margin: 32px auto 0;
-    max-width: 640px;
+
+    max-width: 100%;
 }
 
 /* FIGMA 1024 design */
@@ -17,15 +18,15 @@
 
 /* FIGMA 768 design */
 @media screen and (max-width: 1023px) {
-    .lead__subtitle {}
+    .lead__subtitle {
+        font-size: calc(6px + 3.125vw);
+        line-height: calc(8.57px + 3.57vw);
+    }
 }
 
 /* FIGMA 320 design (up to 425px) */
 @media screen and (max-width: 425px) {
     .lead__subtitle {
-        font-size: 16px;
-        line-height: 1.25em;
-
         margin: 16px 16px 0;
     }
 }
