--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,28 +3,23 @@
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
-    line-height: 1.04em;
+    line-height: 100px;
     text-align: center;
 
     margin: 0 auto;
-    max-width: 720px;
+    max-width: 100%;
 }
 
 /* FIGMA 1024 design */
-@media screen and (max-width: 1279px) {
-    .lead__title {}
-}
+@media screen and (max-width: 1279px) {}
 
 /* FIGMA 768 design */
 @media screen and (max-width: 1023px) {
-    .lead__title {}
+    .lead__title {
+        font-size: 12.5vw;
+        line-height: calc(4px + 12.5vw);
+    }
 }
 
 /* FIGMA 320 design (up to 425px) */
-@media screen and (max-width: 425px) {
-    .lead__title {
-        font-size: 40px;
-        line-height: 1.1em;
-        margin: 0 16px;
-    }
-}
+@media screen and (max-width: 425px) {}
